Adjusted message container media queries Slight bug: message showed behind auth container making it not visible. Display flex, and align items flex-end added to push the message lower when on mobile.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -193,6 +193,8 @@ button:hover {
 @media only screen and (max-width: 380px) {
 
   #message-container {
+    display:flex;
+    align-items: flex-end;
     height: 90px;
   }
 
